Kubernetes/samples/nginx_helloworld_with_ingress/nginx_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-from-deployment
        image: nginxdemos/hello:latest
        ports:
        - containerPort: 80
